# anime-recommender

./: .gitignore  Makefile  README.md  config.json  data_loader.py  main.py  pyproject.toml
anime_recommender/: __init__.py  data_loader.py  engine.py  exceptions.py  main.py  preprocess.py  recommend.py  recommender.py
anime_recommender/models/animeBERT/: config.json
configs/: config_preprocessing.json
notebooks/analysis/: data_analysis.ipynb
notebooks/finetuning/: model_finetuning.ipynb
notebooks/preprocessing/: data_preprocessing.ipynb  z3_models.py  z3aux.py
src/: data_loader.py  main.py  recommend.py
src/config/: config_manager.py
src/data_loading/: data_loader.py
src/models/: autoencoder.py
src/preprocessing/: preprocess.py
src/recommendation/: recommend.py
src/recommender/: recommend.py  recommender.py
