[tool.poetry]
name = "anime-recommender"
version = "0.1.0"
description = "A simple recommendation system for Anime."
authors = ["Oliver Harcourt <96662442+oliverharcourt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pymilvus = "^2.4.8"
thefuzz = "^0.22.1"
requests = "^2.32.3"
textacy = "^0.13.0"
torch = "^2.5.0"
scikit-learn = "^1.5.2"
transformers = "^4.45.2"

[tool.poetry.group.dev.dependencies]
datasets = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
