[tool.poetry]
name = "anime-recommender"
version = "0.6.0"
description = "A simple recommendation system for Anime."
authors = ["Oliver Harcourt <96662442+oliverharcourt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pymilvus = "^2.4.8"
thefuzz = "^0.22.1"
requests = "^2.32.3"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
torch = "2.2.0"
accelerate = "^1.1.1"
datasets = "^3.0.1"
ipykernel = "^6.29.5"
clean-text = {extras = ["gpl"], version = "^0.6.0"}
transformers = "^4.45.2"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
